product adding properly moved to cloudianry

--- a/views/admin/productManagement.ejs
+++ b/views/admin/productManagement.ejs
@@ -59,7 +59,7 @@
               </td>
   
               <td class="px-4 py-4">
-                <img src="/uploads/<%= product.images[0] %>" alt="No Image" class="w-16 h-16 object-cover rounded">
+                <img src="<%= product.images[0].url %>" alt="No Image" class="w-16 h-16 object-cover rounded">
               </td>
   
               <td
