--- a/views/user/productDetail.ejs
+++ b/views/user/productDetail.ejs
@@ -80,12 +80,12 @@
              c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
           </svg>
         </button>
-        <img id="mainImage" src="/Uploads/<%= product.images[0] %>" data-zoom="/Uploads/<%= product.images[0] %>"
+        <img id="mainImage" src="<%= product.images[0].url %>" data-zoom="<%= product.images[0].url %>"
           alt="<%= product.name %>" class="w-full h-[400px] object-contain" />
       </div>
       <div class="flex gap-3 mt-4">
         <% product.images.forEach(img=> { %>
-          <img src="/Uploads/<%= img %>"
+          <img src="<%= img.url %>"
             class="w-20 h-20 border rounded-md cursor-pointer hover:ring-2 hover:ring-gray-500"
             onclick="updateMainImage('/Uploads/<%= img %>')" alt="<%= product.name %> thumbnail">
           <% }) %>
