--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -28,7 +28,7 @@
                         <!-- Product Image -->
                         <a href="/product/<%= product._id %>" class="product-link">
                             <img class="p-6 rounded-t-lg h-48 w-full object-contain product-img"
-                                src="/uploads/<%= product.images[0] || 'default.jpg' %>" alt="<%= product.name %>">
+                                src="<%= product.images[0].url || 'default.jpg' %>" alt="<%= product.name %>">
                         </a>
 
                         <div class="px-5 pb-5 flex flex-col flex-1">
