--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -74,7 +74,7 @@
                     class="flex flex-col sm:flex-row items-center justify-between border border-gray-100 rounded-lg p-4 bg-white hover:bg-gray-100 transition">
                     <div class="flex items-center gap-4 w-full sm:w-auto">
                         <% if(item.image) { %>
-                            <img src="/uploads/<%= item.image %>" class="w-16 h-16 object-cover rounded-md border" />
+                            <img src="<%= item.image %>" class="w-16 h-16 object-cover rounded-md border" />
                             <% } %>
                                 <div>
                                     <p class="font-semibold text-gray-800">
