fixed all showing url with cloudinary

--- a/views/user/payment.ejs
+++ b/views/user/payment.ejs
@@ -28,7 +28,7 @@
             <% cart.items.forEach(item=> { %>
                 <div class="flex items-center justify-between border-b pb-4">
                     <div class="flex items-center gap-4">
-                        <img src="<%= item.image.url %>" alt="Product" class="w-16 h-16 rounded object-cover">
+                        <img src="<%= item.image %>" alt="Product" class="w-16 h-16 rounded object-cover">
                         <div>
                             <h3 class="font-medium text-sm">
                                 <%= item.name %>
